refactoring + chess game